# Minerva_hackathon_roman_roads

./: pyproject.toml
core/: EDA.ipynb  plotly_test_v1.ipynb  preprocessing.py
data/simplified roads/: road_merge_simplify_1.sbn  road_merge_simplify_1.sbx  road_merge_simplify_1.shp  road_merge_simplify_1.shp.xml  road_merge_simplify_1.shx
data/split segments/: road_merge_split_08112023.sbn  road_merge_split_08112023.sbx  road_merge_split_08112023.shp.xml  road_merge_split_08112023.shx
plots/: violin_all_roman_roads.html  violin_all_split_on_province_rank_on_biggest_diff.html  violin_split_on_province.html  violin_split_on_province_ranked_on_top_observation.html
