[tool.poetry]
name = "minerva-hackathon"
version = "0.1.0"
description = "Test code for the minerva paper hackathon working with the road data"
authors = ["Magnus <201907768@post.au.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
